# circuitpython-midi-chip-platform

./: .gitignore  AGENTS.md  EMERGENCY_DISASTER_RECOVERY.md  README.md  pyproject.toml
device/: boot.py  code.py  settings.toml.example
docs/: README.md  agile_delivery_release_plan_v0.1.0.md  audio_priority_amendment_v0.1.0.md  backlog_sanity_check_v0.1.0.md  board_capability_matrix_v0.1.0.md  device_connection_proof_v0.1.0.md  external_qa_audit_report_v0.20.md  lessons_learned_sprint_1_checkpoint_001_v0.1.0.md  lessons_learned_sprint_2_checkpoint_003_v0.1.0.md  lessons_learned_sprint_3_checkpoint_004_v0.1.0.md  mcp_us_002_project_skeleton_review_v0.1.0.md  mcp_us_003_safe_boot_review_v0.1.0.md  mcp_us_004_board_capability_review_v0.1.0.md  mcp_us_005_configuration_secret_boundary_review_v0.1.0.md  mcp_us_006_portable_event_model_review_v0.1.0.md  mcp_us_007_usb_midi_receive_review_v0.1.0.md  mcp_us_008_midi_channel_router_review_v0.1.0.md  mcp_us_014_audio_output_review_v0.1.0.md  mcp_us_016_i2s_diagnostic_review_v0.1.0.md  mcp_us_051_hil_runner_review_v0.1.0.md  mcp_us_051_mcp_us_007_dependency_closed_deployment_impediment_v0.1.0.md  mcp_us_055_logic_d1_i2s_review_v0.1.0.md  mcp_us_062_ble_midi_capability_review_v0.1.0.md  mcp_us_063_d1_core_review_v0.1.0.md  mcp_us_075_safe_audio_gate_review_v0.1.0.md  mcp_us_077_realtime_midi_audio_baseline_review_v0.1.0.md  mcp_us_079_persistent_synthio_audio_graph_plan_v0.1.0.md  mcp_us_080_inv_001_instrumentation_design_review_v0.1.0.md  mcp_us_080_inv_001_locate_first_disappearance_of_noteon_v0.1.0.md  mvp_scope_v0.1.0.md  (+9 more)
(+74 files in other folders)
